# MrParse

./: CHANGELOG.rst  CMakeLists.txt  CONTRIB.rst  LICENSE  README.md  README.rst  find_domains.py  index.html  requirements.txt  tabularResults.csv
data/: 2uvo.fasta  2uvo.hhr  2uvoA.fasta  2uvoA_hhpred.hhr  2uvoA_phmmerDomTblout.txt  2uvoA_phmmerTblout.txt  2uvoA_phmmer_server.txt  2uvoA_phmmer_server_2vuoA_aligned.culstal  2uvoA_phmmer_server_2vuoA_aligned.fasta  2uvo_A.fasta  5hxg.fasta  O75410_800.fasta  af2_sequences.fasta  jp_dSDGWMs.concise  mrparse.config  query.result.txt
docs/: conf.py  contents.rst  doc-requirements.txt  examples.rst  install.rst  references.rst
html/: mrparse.css  mrparse.html  mrparse.html.jinja2  mrparse.js  mrparse_vue.js  multi_domains_template.html  vue_play.html
mrparse/: __main__.py  logging.cfg  logging.json  mr_3dbeacons.py  mr_alphafold.py  mr_analyse.py  mr_annotation.py  mr_args.py  mr_bfvd.py  mr_classify.py  mr_deepcoil.py  mr_deeptmhmm.py  mr_esmatlas.py  mr_esmfold.py  mr_hit.py  mr_hkl.py  mr_homolog.py  mr_jpred.py  mr_log.py  mr_main.py  mr_mmseqs.py  mr_pfam.py  mr_phaser.py  mr_region.py  mr_search_model.py  mr_sequence.py  mr_tmhmm.py  mr_topcons.py  mr_util.py  mr_version.py  phmmer_cl.py  searchDB.py  test.py  test_bio.py  test_mrbump.py  test_mtz_analysis_cctbx.py  test_nmols.py  test_phaser.py
pfam/: multi_domains.html  multi_domains_template.html
scripts/: jpredapi
tests/: conftest.py  data_constants.py  set_mrparse_path.py  test.py  test_bio.py  test_mr_alphafold.py  test_mr_analyse.py  test_mr_deepcoil.py  (+14 more)
(+29 files in other folders)
